# webserv

./: .gitignore  .gitmodules  CMakeLists.txt  HTTPRequest.cpp  HTTPRequst.hpp  Makefile  TEST  funcTestMain.cpp  grade.sh  httpmain.cpp  httprequest  main.cpp  makefile  mvFiles.sh  test.cpp  tmp  webserv  webserv.hpp
HTTP/: HTTPRequest.cpp  httprequest.txt
UnitTests/: AutoIndexTests.cpp  CMakeLists.txt  CgiTests.cpp  HttpMethodTests.cpp  HttpRequestTests.cpp  ServerChild.cpp  UtilsTests.cpp
UnitTests/testroot/var/www/: index.html
config/: basic.conf  bug.conf  hoge.conf  multiPort.conf  multiServ.conf  nginxInception.conf  nginxtest.conf  redirect.conf  review.conf
default/: index.html
inceptionHTML/: error404.html  index8080.html  index8081.html  index8082.html  index8083.html  index8084.html  index8085.html
server/: Cgi.cpp  Cgi.hpp  URL_to_Path.cpp  URL_to_Path.hpp  cgi_test.cpp  server.cpp  server.hpp  serverChild.cpp  serverChild.hpp  serverChild_test.cpp  socket.cpp  socket.hpp  socket_test.cpp  test.cpp
socket/: main.cpp  server.cpp  server.hpp  socket  socket.cpp  socket.hpp  socket_test.cpp
srcs/: HttpResponse.cpp  status_code.hpp  utils.cpp  utils.hpp
srcs/HTTP/: CMakeLists.txt  HTTPHead.cpp  HTTPHead.hpp  HTTPRequest.cpp  HTTPRequst.hpp  httprequest.txt
srcs/cgi/: CMakeLists.txt  Cgi.cpp  Cgi.hpp
srcs/config/: CMakeLists.txt  Config.cpp  Config.hpp  ConfigConstant.hpp  ConfigParser.cpp  ConfigParser.hpp  LocationConfig.cpp  LocationConfig.hpp  ServerConfig.cpp  ServerConfig.hpp
srcs/httpMethod/: AutoIndex.cpp  AutoIndex.hpp  CMakeLists.txt  HTTPMethod.cpp  HTTPMethod.hpp  HTTPProcess.cpp  HTTPProcess.hpp  MethodUtils.cpp  MethodUtils.hpp  Redirection.cpp
srcs/httpResponse/: CMakeLists.txt  HttpResponse.cpp  HttpResponse.hpp  status_code.hpp
srcs/server/: CMakeLists.txt  Cgi.cpp  Cgi.hpp  URL_to_Path.cpp  URL_to_Path.hpp  main.cpp  server.cpp  server.hpp  serverChild.cpp  serverChild.hpp  serverChild_test.cpp  socket.cpp  socket.hpp  socket_test.cpp  tmp.c
srcs/socket/: server.cpp  server.hpp  socket.cpp  socket.hpp
srcs/utils/: CMakeLists.txt  utils.cpp  utils.hpp
test_utils/cgi/: cgi-hello-python.cgi  new-file.py  test.sh
var/www/HTML/: index.html
var/www/first_srv/: index.html
var/www/hoge_srv/: index.html
var/www/inception_server/cgi-bin/: check-cgi-environ.py  environPrnt.py
var/www/inception_server/foo/: index.html
var/www/inception_server/hoge/: index.html
var/www/inception_server/html/: error404.html  error50x.html
